# GreenhousePython

./: LICENSE  README.md  commands_usage.sh  comments.txt  install.sh  install_and_uninstall.sh  pyproject.toml
.github/workflows/: codeql.yml
docs/: basic_usage.md
images/: dataIndex.txt  dataIndexMaster.txt
primaryPython/: READ_ME_PLEASE  Sunrise_Stuff.py  main.py  mcp_testing.py  test_camera.py  tkinter_stuff.py  water_control.py
primaryPython/vir/: pyvenv.cfg
src/: cameraControl.py  lights.py  main.py  nonsense.py
src/greenhousepython/: cfg.txt  client.py  dataIndex.txt  file_managment.py  gpio_wrapper.py  main.py  nonsense.py  really-jank.sh  server.py
